# src/main/kotlin/no/nav/sokos/oppdrag/attestasjon/api/AttestasjonApi.kt
@@ -4,6 +4,7 @@ import io.ktor.server.application.call
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
+import io.ktor.server.routing.get
 import io.ktor.server.routing.post
 import io.ktor.server.routing.route
 import no.nav.sokos.oppdrag.attestasjon.service.AttestasjonService
@@ -19,6 +20,14 @@ fun Route.attestasjonApi(service: AttestasjonService = AttestasjonService()) {
                 service.hentOppdragForAttestering(
                     gjelderIdRequestBody.gjelderId,
                     call,
+                ),
+            )
+        }
+
+        get("oppdragslinjer") {
+            call.respond(
+                service.hentOppdragslinjerForAttestering(
+                    call.parameters["oppdragsId"].orEmpty().toInt(),
                 ),
             )
         }
